# tweede-kamer

./: README.md  data-exploration (1).html  promt.ipynb  pyproject.toml  shell.nix  test_02.02.2025.csv  translate.ipynb
.ipynb_checkpoints/: nohup-checkpoint.out  translate-checkpoint.ipynb
data/tests/: test_02.02.2025.csv
pdf scraping/: data-exploration.ipynb  debates.csv  debates.xml  pdfplumber_savetocsv.ipynb  speeches_new.csv
pdf scraping/txt/: 40993d1c-f887-482d-89f7-33e41f6f7ed9.pdf.txt  ed7ffb05-ec88-44ef-a7a0-92caf70df476.pdf.txt
