[project]
name = "tweede-kamer"
version = "0.1.0"
description = "Codebase for the tweede kamer CSSci project"
authors = [
    {name = "David Wild",email = "david.wild@student.uva.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
